# Software-Engineering-Project-Phase-II

./: .coverage  .gitignore  README.md  SECURITY_CONFIG.md  coverage.json  pyproject.toml  registry.db  requirements.txt  run.py
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml
docs/: API_COMPATIBILITY.md  EC2_USAGE_GUIDE.md  api-usage.md  deploy-aws-ec2.md
scripts/: EC2_DEPLOYMENT.md  autograder-smoke-test.py  check_s3.py  deploy_to_ec2.py  setup_ec2.py  test_api.py
src/api/: __init__.py  main.py
src/api/db/: crud.py  database.py  models.py
src/api/models/: __init__.py  schemas.py
src/api/routes/: artifacts.py  health.py  ingest.py  lineage.py  rating.py  search.py
src/api/services/: github.py  license.py  lineage.py  logging.py  metrics.py
src/api/storage/: __init__.py  s3.py
src/core/: compute.py
static/: artifact.html  health.html  index.html  upload.html
static/css/: style.css
static/js/: app.js
tests/: conftest.py  test_api_artifacts.py  test_api_health.py  test_api_ingest.py  test_api_lineage.py  test_api_rating.py  test_api_search.py  test_cli.py  test_db.py  test_github_service.py  test_gui_selenium.py  test_license_service.py  test_s3.py
